# surrealdb-actix

./: .gitignore  Cargo.toml  README.md
src/: error.rs  main.rs  prelude.rs
src/api/: mod.rs  todo_api.rs
src/model/: mod.rs  todo_model.rs
src/repository/: mod.rs  surrealdb_repo.rs
src/utils/: macros.rs  mod.rs  try_froms.rs
